Changes for 1.6.1.1
* Fixed bug causing land units carried by air units (paratroopers tech) to blitz unoccupied enemy territories on route if going behind enemy lines. (veqryn)

* Fixing bug preventing renamed hardcoded techs from working properly. (veqryn)

* Fixing some errors with Sliding Tiles game, Tic Tac Toe, and Kings Table. (veqryn)

* Cleanup and abstraction of some AI classes and constructors and superclasses. (veqryn)

* Fixed string index out of bounds error with notifications, and also forced them to shorten for the history event record, to 150 characters if needed by removing all html code then truncating the string. (veqryn)

* Fixed issue with moving of old fighters to a new carrier by making sure it only used the producer territory. (veqryn)

* Updating build to include old jars. Updating framework to ignore micro version numbers, so that 1.5.2.1 will also load 1.5.2.0 savegames, etc. (veqryn)

* Created dialog to ask user if they want to load an old savegame.  Fixed framework so that it can load any old savegame if it can find an old engine to match. And added 1.6.0.0 jar engine. (veqryn)

* Including old 1.5.2.1 jar file with slight modifications, so that 1.6.1.1 can play 1.5.2.1 savegames by simply running them with 1.5.2.1, but as a separate application. (veqryn)

* Creating framework for loading older savegames using older included jar files. (veqryn)

* Fixing some errors with command line options, and abstracting some game running utilities. (veqryn)

* Fixing display error in old paratroopers tech that caused the land unit to appear to die with the air unit even after it has landed and survived any aa fire. (veqryn)

* Making sure technology still has an effect even if it is not in a player's tech frontier. (veqryn)

* Make sure the game chooser menu is cleared from memory after closed. (veqryn)

* Created method to maintain savegame compatibility between 1.6.1 and 1.6.1.1 with regards to techs. (veqryn)
